Close button on country card on mobile resizing issue solved

--- a/covid-19-dashboard-app/css/index.css
+++ b/covid-19-dashboard-app/css/index.css
@@ -175,7 +175,8 @@ html {
     flex-wrap: wrap; /* For mobile */
     margin-top: 7rem;
 }
-.close-card-btn {
+.close-card-btn,
+.close-card-btn:active {
     margin: -0.75rem -19.5rem 0 0;
     width: 1.5rem;
     height: 1.5rem;
